CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

INSTALL (
  FILES RedisClient.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES add-agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES add-service.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES delete-agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES pubsub-add-service.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES pubsub-delete-service.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES pubsub-update-service.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
