CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

INSTALL (
  FILES add-agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES remove-agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES start-agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES stop-agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES heartbeat.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES push-profile.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES minigEngine.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
