CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

INSTALL (
  FILES add_agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES remove_agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES start_agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES stop_agent.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES heartbeat.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES push_profile.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES minig_engine.py
  DESTINATION ${AGENT_DATA_DIR}/scripts
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
