CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

SET (TOOLS
  ntrace_cli.py
  mining_engine.py)

INSTALL (
  FILES ${TOOLS}
  DESTINATION ${PROJECT_DATA_DIR}/tools
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

SET (TOOLS_DATA
  services.json
  services_blacklist.json)

INSTALL (
  FILES ${TOOLS_DATA}
  DESTINATION ${PROJECT_DATA_DIR}/tools
  PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
