CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

INCLUDE_DIRECTORIES (
  ${PROJECT_SOURCE_DIR}/src/util)

SET (LOGD_SOURCE_FILES
  logd.c
  ${PROJECT_SOURCE_DIR}/src/util/util.c)
ADD_EXECUTABLE (${ROOT_PROJECT_LOWER}_logd ${LOGD_SOURCE_FILES})
TARGET_LINK_LIBRARIES (${ROOT_PROJECT_LOWER}_logd czmq)
INSTALL (TARGETS ${ROOT_PROJECT_LOWER}_logd DESTINATION ${AGENT_SBIN_DIR})

SET (LOGVIEW_SOURCE_FILES
  logview.c
  ${PROJECT_SOURCE_DIR}/src/util/util.c)
ADD_EXECUTABLE (${ROOT_PROJECT_LOWER}_logview ${LOGVIEW_SOURCE_FILES})
TARGET_LINK_LIBRARIES (${ROOT_PROJECT_LOWER}_logview czmq)
INSTALL (TARGETS ${ROOT_PROJECT_LOWER}_logview DESTINATION ${AGENT_BIN_DIR})

INSTALL (
  FILES logd.init
  RENAME ${ROOT_PROJECT_LOWER}_logd
  DESTINATION ${AGENT_DATA_DIR}/service
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES logger_h.h
  RENAME logger.h
  DESTINATION ${AGENT_INCLUDE_DIR}
  PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

