CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

INCLUDE_DIRECTORIES (
  ${PROJECT_SOURCE_DIR}/src/util)

SET (LOGGER_SERVICE_SOURCE_FILES
  logger_service.c
  ${PROJECT_SOURCE_DIR}/src/util/util.c)
ADD_EXECUTABLE (${ROOT_PROJECT_LOWER}_logger ${LOGGER_SERVICE_SOURCE_FILES})
TARGET_LINK_LIBRARIES (${ROOT_PROJECT_LOWER}_logger czmq)
INSTALL (
  TARGETS ${ROOT_PROJECT_LOWER}_logger
  DESTINATION ${PROJECT_SBIN_DIR})

SET (LOGVIEW_SOURCE_FILES
  logview.c
  ${PROJECT_SOURCE_DIR}/src/util/util.c)
ADD_EXECUTABLE (${ROOT_PROJECT_LOWER}_logview ${LOGVIEW_SOURCE_FILES})
TARGET_LINK_LIBRARIES (${ROOT_PROJECT_LOWER}_logview czmq)
INSTALL (
  TARGETS ${ROOT_PROJECT_LOWER}_logview
  DESTINATION ${PROJECT_BIN_DIR})

INSTALL (
  FILES logger_service.init
  RENAME ${ROOT_PROJECT_LOWER}_logger
  DESTINATION /etc/init.d/
  PERMISSIONS  OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL (
  FILES logger_h.h
  RENAME logger.h
  DESTINATION ${PROJECT_INCLUDE_DIR}
  PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

