CMAKE_MINIMUM_REQUIRED (VERSION 2.8.0)

INCLUDE_DIRECTORIES (
  ${PROJECT_SOURCE_DIR}/src/util)

SET (LOGVIEW_SOURCE_FILES
  logview.c
  ${PROJECT_SOURCE_DIR}/src/util/util.c)
ADD_EXECUTABLE (${ROOT_PROJECT_LOWER}_logview ${LOGVIEW_SOURCE_FILES})
TARGET_LINK_LIBRARIES (${ROOT_PROJECT_LOWER}_logview czmq)
INSTALL (
  TARGETS ${ROOT_PROJECT_LOWER}_logview
  DESTINATION ${PROJECT_BIN_DIR})

INSTALL (
  FILES log.h
  DESTINATION ${PROJECT_INCLUDE_DIR}
  PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
